# Selfwork_HR-assistant

./: .gitignore  README.md  chainlit.md  pyproject.toml  test_sync.py
.chainlit/: config.toml
.files/c49b3567-5e48-484b-9df0-a9a0112c040d/: d3304dd7-c79c-4ba0-a14a-eec57b17f1eb.txt
public/: app.css  theme.json
resumes/: cv_01_marco_rossi_meccanico_tuning.txt  cv_02_luca_ferrari_software_engineer.txt  cv_03_mario_rossi_digital_marketing_manager.txt  cv_04_andrea_bianchi_information_security_manager.txt  cv_05_mario_rossi_controller_di_gestione.txt  cv_06_franco_musso.txt  cv_08_test_multiformat.csv  cv_09_test_multiformat.json
src/hr_assistant/: __init__.py  chunking.py  config.py  database.py  document_processor.py  utils.py
