[tool.poetry]
name = "hr-assistant"
version = "0.1.0"
description = "HR Assistant con RAG ed embeddings"
authors = ["Maru"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
chromadb = "^1.5.9"
openai = "^2.41.1"
chainlit = "^2.11.1"
ollama = "^0.6.2"
numpy = "^2.4.6"
scikit-learn = "^1.9.0"
langchain-openai = "^1.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
